make text wrapping work in headers/footers too (fdo#39155)

There does not seem to be a reason for avoiding this in headers,
with this change the behavior either stays the same or improves.